--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Ying Liu 
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Thoughts about coding and business 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/4055382?v=3&u=24cdb09a612b3d3f7c448c50bd7bf16c3bb05b8e&s=40 
